[package]
name = "clone-cw-multi-test"
version = "0.6.2"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2021"
description = "Testing tools for multi-contract interactions. Helps simulating chain behavior with on-chain storage locally"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-multi-test"
homepage = "https://cosmwasm.com"

[features]
default = []
backtrace = ["anyhow/backtrace"]

[dependencies]
anyhow = "1.0.75"
bech32 = "0.11.0"
cosmwasm-std = { version = "2.1", features = [
    "iterator",
    "staking",
    "stargate",
    "cosmwasm_2_0",
] }
cw-storage-plus = "2.0.0"
cw-utils = "2.0.0"
derivative = "2.2.0"
itertools = "0.12.0"
prost = "0.13.0"
schemars = "0.8.16"
serde = "1.0.193"
sha2 = "0.10.8"
thiserror = "1.0.61"

# Clone testing deps
## Network
cw-orch = { version = "0.25.0", features = ["daemon"] }
tokio = "1.28.2"
tonic = "0.12.2"

## Emulation
cosmwasm-vm = { version = "2.1.3", features = [
    "staking",
    "stargate",
    "iterator",
] }

## Dual Storage
cosmrs = "0.19.0"
num-bigint = "0.4.3"

# Analyzer
treediff = { version = "4.0.2", features = ["with-rustc-serialize"] }
rustc-serialize = "0.3.24"
serde_json = "1.0.105"
log = "0.4.19"
wasmer = { version = "4.3.0", default-features = false, features = [
    "cranelift",
    "singlepass",
] }

# Caching
cargo_metadata = "0.18" # For finding Cargo target dir
file-lock = "2.1"

[dev-dependencies]
hex = "0.4.3"
hex-literal = "0.4.1"
once_cell = "1.19.0"

# General
env_logger = "0.10.0"
cosmwasm-schema = "2.1.3"

# Cavern Test App
cw20 = "2.0.0"
moneymarket = { git = "https://github.com/CavernPerson/money-market-contracts" }
cw2 = "2.0.0"
