[package]
repository = "https://github.com/CosmWasm/cw-multi-test"
version = "0.6.2"
authors = [
    "Ethan Frey <ethanfrey@users.noreply.github.com>",
    "Dariusz Depta <DariuszDepta@users.noreply.github.com>",
]
edition = "2021"
description = "Testing tools for multi-contract interactions. Helps simulating chain behavior with on-chain storage locally"
license = "Apache-2.0"
name = "clone-cw-multi-test"
homepage = "https://cosmwasm.com"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
backtrace = ["anyhow/backtrace"]
staking = ["cosmwasm-std/staking"]
stargate = ["cosmwasm-std/stargate"]
cosmwasm_1_1 = ["cosmwasm-std/cosmwasm_1_1"]
cosmwasm_1_2 = ["cosmwasm_1_1", "cosmwasm-std/cosmwasm_1_2"]
cosmwasm_1_3 = ["cosmwasm_1_2", "cosmwasm-std/cosmwasm_1_3"]
cosmwasm_1_4 = ["cosmwasm_1_3", "cosmwasm-std/cosmwasm_1_4"]
cosmwasm_2_0 = ["cosmwasm_1_4", "cosmwasm-std/cosmwasm_2_0"]
cosmwasm_2_1 = ["cosmwasm_2_0", "cosmwasm-std/cosmwasm_2_1"]

[dependencies]
anyhow = "1.0.89"
bech32 = "0.11.0"
cosmwasm-schema = "2.1.3"
cosmwasm-std = "2.1.4"
cw-storage-plus = "2.0.0"
cw-utils = "2.0.0"
itertools = "0.13.0"
prost = "0.13.3"
schemars = "0.8.21"
serde = "1.0.210"
sha2 = "0.10.8"
thiserror = "1.0.64"

# Clone testing deps
## Network
cw-orch = { version = "0.25.0", features = ["daemon"] }
tokio = "1.28.2"
tonic = "0.12.2"

## Emulation
cosmwasm-vm = { version = "2.1.3", features = [
    "staking",
    "stargate",
    "iterator",
] }

## Dual Storage
cosmrs = "0.19.0"
num-bigint = "0.4.3"

# Analyzer
treediff = { version = "4.0.2", features = ["with-rustc-serialize"] }
rustc-serialize = "0.3.24"
serde_json = "1.0.105"
log = "0.4.19"
wasmer = { version = "4.3.0", default-features = false, features = [
    "cranelift",
    "singlepass",
] }

# Caching
cargo_metadata = "0.18" # For finding Cargo target dir
file-lock = "2.1"

[dev-dependencies]
hex = "0.4.3"
hex-literal = "0.4.1"
once_cell = "1.19.0"

# Clone testing deps

# General
env_logger = "0.10.0"
cosmwasm-schema = "2.1.3"

# Cavern Test App
cw20 = "2.0.0"
moneymarket = { git = "https://github.com/CavernPerson/money-market-contracts" }
cw2 = "2.0.0"
